//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table User {
  id String [pk]
  name String [not null]
  npm String [unique]
  alamat String
  semester String
  phone String [unique]
  email String [unique, not null]
  password String
  role Role [not null, default: 'MAHASISWA']
  prodiId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  token String [unique]
  isActive Boolean [not null, default: false]
  image String
  emailVerified DateTime
  isBannerOpen Boolean [default: true]
  imageMeta Json [note: '[FileResponse]']
  accounts Account [not null]
  ActivityLog ActivityLog [not null]
  Buku Buku [not null]
  notification Notification [not null]
  PatenAndHakiTable PatenAndHakiTable [not null]
  PengajuanBeasiswa PengajuanBeasiswa [not null]
  prestasiDataTables PengajuanOnUsers [not null]
  sessions Session [not null]
  prodi MasterDataProdi
}

Table MasterDataBeasiswa {
  id String [pk]
  syarat String [not null]
  templateFormulir Json [note: '[FileResponse]']
}

Table Dosen {
  id String [pk]
  name String [not null]
  nidn String [not null]
  prodiId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  prodi MasterDataProdi
  PengajuanOnUsers PengajuanOnUsers [not null]
  PengajuanPKM PengajuanPKM [not null]
  prestasiDataTable PrestasiDataTable [not null]
}

Table MasterDataFakultas {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  prodi MasterDataProdi [not null]
}

Table MasterDataProdi {
  id String [pk]
  name String [not null]
  fakultasId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  Dosen Dosen [not null]
  Fakultas MasterDataFakultas [not null]
  user User [not null]
}

Table MasterDataOrkem {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  PrestasiDataTable PrestasiDataTable [not null]
}

Table MasterDataTingkatKejuaraan {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  PrestasiDataTable PrestasiDataTable [not null]
}

Table MasterDataTingkatPrestasi {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  PrestasiDataTable PrestasiDataTable [not null]
}

Table DokumenSKMeta {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  nomorSK String [not null]
  tanggalSK DateTime [not null]
  dokumenSK Json [note: '[FileResponse]']
  Buku Buku [not null]
  PengajuanPKM PengajuanPKM [not null]
  PrestasiDataTable PrestasiDataTable [not null]
}

Table LampiranData {
  id String [pk]
  piagamPenghargaan Json [note: '[FileResponse]']
  fotoPenyerahanPiala Json [note: '[FileResponse]']
  undanganKejuaraan Json [note: '[FileResponse]']
  dokumenPendukung Json [note: '[FileResponse]']
  PrestasiDataTable PrestasiDataTable [not null]
}

Table PrestasiDataTable {
  id String [pk]
  kegiatan String [not null]
  tanggalKegiatan DateTime [not null]
  penyelenggara String
  createdAt DateTime [default: `now()`]
  orkemId String
  createdById String [not null]
  tingkatKejuaraanId String [not null]
  tingkatPrestasiId String [not null]
  dosenId String [not null]
  lampiranId String [not null]
  updatedAt DateTime [default: `now()`, not null]
  status String [not null, default: 'Sedang Diproses']
  suratKeputusanId String
  activityLog ActivityLog [not null]
  users PengajuanOnUsers [not null]
  dosen Dosen [not null]
  lampiran LampiranData [not null]
  orkem MasterDataOrkem
  suratKeputusan DokumenSKMeta
  tingkatKejuaraan MasterDataTingkatKejuaraan [not null]
  tingkatPrestasi MasterDataTingkatPrestasi [not null]

  Note: '==== PENGAJUAN PRESTASI TABLE === ///'
}

Table PengajuanOnUsers {
  userId String [not null]
  dosenId String
  prestasiDataTableId String
  PengajuanPKMId String
  PengajuanPatenAndHakiTableId String
  keterangan String [not null, default: 'Ketua Tim']
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  PengajuanPKM PengajuanPKM
  PengajuanPatenAndHakiTable PatenAndHakiTable
  dosen Dosen
  PrestasiDataTable PrestasiDataTable
  user User [not null]
}

Table PengajuanPKM {
  id String [pk]
  judul String [not null]
  deskripsi String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  totalAnggaran BigInt
  dosenId String [not null]
  status String [not null, default: 'Sedang Diproses']
  tanggalKegiatan DateTime [not null]
  dokumenProposal Json [note: '[FileResponse]']
  suratKeputusanId String
  activityLog ActivityLog [not null]
  users PengajuanOnUsers [not null]
  dosen Dosen [not null]
  suratKeputusan DokumenSKMeta

  Note: '=== PENGAJUAN NEW FEATURE TABLE === ///'
}

Table PengajuanBeasiswa {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  status String [not null, default: 'Sedang Diproses']
  dokumen Json [note: '[FileResponse]']
  userId String [not null]
  description String [not null]
  ActivityLog ActivityLog [not null]
  user User [not null]
}

Table PatenAndHakiTable {
  id String [pk]
  judul String [not null]
  nomorPaten String
  expiredDate DateTime
  createdAt DateTime [default: `now()`, not null]
  keterangan String [not null]
  jenis PatenAndHaki [not null, default: 'HAKI']
  updatedAt DateTime [default: `now()`, not null]
  createdById String [not null]
  dokumenPendukung Json [note: '[FileResponse]']
  status String [not null, default: 'Sedang Diproses']
  dokumenTambahan Json [note: '[FileResponse]']
  dosen Json [note: '[UserInfoType]']
  ActivityLog ActivityLog [not null]
  user User [not null]
  PengajuanOnUsers PengajuanOnUsers [not null]

  Note: '=== PENGAJUAN LUARAN TABLE === ///'
}

Table Buku {
  id String [pk]
  tahunTerbit DateTime
  jumlahEksemplar String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  userId String [not null]
  status String [not null, default: 'Sedang Diproses']
  dokumenPendukung Json [note: '[FileResponse]']
  suratKeputusanId String
  judulBuku String [not null]
  nomorISBN String
  penerbit String [not null]
  pengarang String [not null]
  penulis String [not null]
  ActivityLog ActivityLog [not null]
  suratKeputusan DokumenSKMeta
  user User [not null]
}

Table NotifMessage {
  id String [pk]
  status String [not null]
  module String [not null]
  moduleId String [not null]
  description String [not null]
  forUserMessage String
  forAdminMessage String
  createdAt DateTime [default: `now()`, not null]
  prestasiDataTableId String
  catatan String
  actionByAdminId String
  actionByMahasiswaId String [not null]
  userInfo Json[] [not null, note: '[UserInfoType]']
  Notification Notification [not null]
}

Table Notification {
  id String [pk]
  readed Boolean [not null, default: false]
  notificationMessageId String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  activityLogId String [not null]
  notificationMessage NotifMessage [not null]
  User User [not null]
}

Table ActivityLog {
  id String [pk]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  status String [not null, default: 'Diajukan']
  catatan String
  prestasiDataTableId String
  pengajuanBeasiswaId String
  patenAndHakiTableId String
  pengajuanPKMId String
  bukuId String
  Buku Buku
  PatenAndHakiTable PatenAndHakiTable
  PengajuanBeasiswa PengajuanBeasiswa
  PengajuanPKM PengajuanPKM
  PrestasiDataTable PrestasiDataTable
  User User [not null]
}

Enum Role {
  MAHASISWA
  ADMIN
}

Enum PatenAndHaki {
  PATEN
  HAKI
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: User.prodiId > MasterDataProdi.id

Ref: Dosen.prodiId > MasterDataProdi.id

Ref: MasterDataProdi.fakultasId > MasterDataFakultas.id

Ref: PrestasiDataTable.dosenId > Dosen.id

Ref: PrestasiDataTable.lampiranId > LampiranData.id

Ref: PrestasiDataTable.orkemId > MasterDataOrkem.id

Ref: PrestasiDataTable.suratKeputusanId > DokumenSKMeta.id

Ref: PrestasiDataTable.tingkatKejuaraanId > MasterDataTingkatKejuaraan.id

Ref: PrestasiDataTable.tingkatPrestasiId > MasterDataTingkatPrestasi.id

Ref: PengajuanOnUsers.PengajuanPKMId > PengajuanPKM.id

Ref: PengajuanOnUsers.PengajuanPatenAndHakiTableId > PatenAndHakiTable.id

Ref: PengajuanOnUsers.dosenId > Dosen.id

Ref: PengajuanOnUsers.prestasiDataTableId > PrestasiDataTable.id

Ref: PengajuanOnUsers.userId > User.id

Ref: PengajuanPKM.dosenId > Dosen.id

Ref: PengajuanPKM.suratKeputusanId > DokumenSKMeta.id

Ref: PengajuanBeasiswa.userId > User.id

Ref: PatenAndHakiTable.createdById > User.id

Ref: Buku.suratKeputusanId > DokumenSKMeta.id

Ref: Buku.userId > User.id

Ref: Notification.notificationMessageId > NotifMessage.id

Ref: Notification.userId > User.id

Ref: ActivityLog.bukuId > Buku.id

Ref: ActivityLog.patenAndHakiTableId > PatenAndHakiTable.id

Ref: ActivityLog.pengajuanBeasiswaId > PengajuanBeasiswa.id

Ref: ActivityLog.pengajuanPKMId > PengajuanPKM.id

Ref: ActivityLog.prestasiDataTableId > PrestasiDataTable.id

Ref: ActivityLog.userId > User.id